--- a/vlak.html
+++ b/vlak.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🚂 Vlak</h1>
+    <div id="description">
+        <h1>🚂 Vlak</h1>    
+    </div>
     
     <div id="game">
         <div id="intro" class="intro">
             <button id="start" class="btn">Spiel sterten</button>
             <button class="btn" onclick="location.href='https://cs.wikipedia.org/wiki/Vlak_(po%C4%8D%C3%ADta%C4%8Dov%C3%A1_hra)'">Verlassen</button>
+            <button id="reset" class="btn">Reset Game</button>
 
             <p>Dieses Spiel ist eine Nachmachung des Spiels "Vlak" aus dem Jahr 1993</p>
             <p>Spielanleitung: Bewege den Zug mit den Pfeiltasten oder mit WASD</p>
