add new feature with Extra Level

--- a/vlak.html
+++ b/vlak.html
@@ -18,7 +18,8 @@
             <button id="reset" class="btn">Reset Game</button>
 
             <p>Dieses Spiel ist eine Nachmachung des Spiels "Vlak" aus dem Jahr 1993</p>
-            <p>Spielanleitung: Bewege den Zug mit den Pfeiltasten oder mit WASD</p>
+            <p>Spielanleitung: Bewege den Zug mit den Pfeiltasten oder mit WASD und sammele Waggons ein</p>
+            <p>Für extra Geschwindigkeit drücke SPACE</p>
         </div>
         
     </div>
